<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txtTitleCarName" />

    <EditText
        android:id="@+id/etDialogCarName"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txtTitleCarYear" />

    <EditText
        android:id="@+id/etDialogCarYear"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/DialogCarBtnYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_DialogCar_Yes" />

        <Button
            android:id="@+id/DialogCarBtnNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_DialogCar_No" />
    </LinearLayout>

</LinearLayout>