<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txtTitle_DialogEditDriver_DriverName" />

    <EditText
        android:id="@+id/etDialogEditDriverName"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txtTitle_DialogEditDriver_DriverAge" />

    <EditText
        android:id="@+id/etDialogEditDriverAge"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/DialogEditDriverBtnYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_DialogEditDriver_Yes" />

        <Button
            android:id="@+id/DialogEditDriverBtnNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_DialogEditCar_No" />
    </LinearLayout>

</LinearLayout>