<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="24sp"
        android:gravity="center"
        android:text="@string/txtTitle_DialogDriver_Delete" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/DialogDeleteDriverBtnYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_DialogDeleteDriver_Yes" />

        <Button
            android:id="@+id/DialogDeleteDriverBtnNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_DialogDeleteCar_No" />
    </LinearLayout>

</LinearLayout>